# backdoor

./: .gitignore  CMakeLists.txt  KnockController.cpp  KnockController.h  KnockState.h  LICENSE  NetworkEngine.cpp  README.md  TcpStack.cpp  ]  authenticator.cpp  backdoor.conf  backtest.sh  constants.h  controller.c  controller.h  crypto.c  crypto.cpp  crypto.h  main.c  main.cpp  main.h  mask.c  mask.h  networking.c  networking.cpp  networking.h  packet_auth.c  packet_auth.h  packet_handler.c  packet_handler.h  tmp.c  xor_string  xor_string.c
.github/workflows/: main.yml
deprecated/: asdf.py  backtest.sh  test.py  xor_string.c
docs/captures/raw/: ignoring-malformed-raw.pcapng
legacy/: CMakeLists.txt  README.md  controller.c  controller.h  main.c  mask.c  mask.h  networking.c  networking.h  packet_auth.c  packet_handler.c  packet_handler.h
legacy/docs/captures/filtered/: executing-command-filtered.pcapng  ignoring-unauthenticated-filtered.pcapng
libs/filemon/: CMakeLists.txt
libs/filemon/include/: FileMonitor.h
libs/filemon/src/: FileMonitor.cpp
libs/keylogger/: CMakeLists.txt
libs/keylogger/include/: Keylogger.h
libs/keylogger/src/: Keylogger.cpp
libs/net/: CMakeLists.txt
libs/net/include/: Crypto.h  KnockController.h  KnockState.h  NetworkEngine.h  authenticator.h
libs/net/src/: Crypto.cpp  KnockController.cpp  KnockState.cpp  NetworkEngine.cpp  TcpStack.cpp  UdpStack.cpp  authenticator.cpp
libs/rce/: CMakeLists.txt
libs/rce/include/: RemoteCodeExecuter.h
libs/rce/src/: RemoteCodeExecuter.cpp
